--- a/first_page.html
+++ b/first_page.html
@@ -8,9 +8,9 @@
     <body>
 
         <ol>
-           <li><a href = './first_page.html' target = '_self'><b>Первая страница</b></a>
-           <li><a href = './first_page.html'#head2 target = '_self'>Перейти ко второму заголовку</a>
-           <li><a href = './first_page.html' target = '_self'><img height="30px" src = './src.jpg.'></a>
+           <li><a href = './hw_website/first_page.html' target = '_self'><b>Первая страница</b></a>
+           <li><a href = './hw_website/first_page.html'#head2 target = '_self'>Перейти ко второму заголовку</a>
+           <li><a href = './hw_website/first_page.html' target = '_self'><img height="30px" src = './src.jpg.'></a>
            <li><a href = 'https://t.me/+nbsiB17qgTNkZjBi' target="_blank">Ссылка на мой телеграм-канал со стишками</a>
         </ol>
 
